# anthracite-browser

./: .gitignore  CODE_OF_CONDUCT.md  CONTRIBUTING.md  README.md  index.html  package-lock.json  package.json  poseidon_vision.md  tailwind.config.js  tasks.json  vite.config.ts  vitest.config.ts
.github/ISSUE_TEMPLATE/: bug_report.md
.github/workflows/: build.yml  test.yml
backend/: action_interceptor.py  agent.py  cdp_agent.py  cdp_fast.py  classifier.py  requirements.txt  server.py
backend/browser-use/: README.md  pyproject.toml
backend/browser-use/.git_backup/: FETCH_HEAD  config  index  packed-refs
backend/browser-use/browser_use/: cli.py
backend/browser-use/docs/: docs.json
backend/browser-use/tests/: test_anthracite_agent.py
backend/tests/: test_classifier.py
native-core/: Cargo.toml  index.d.ts  index.darwin-arm64.node  index.js  package-lock.json  package.json
native-core/src/: lib.rs
src/@types/: adblock-rs.d.ts
src/main/: agent-memory.ts  auth-preload.ts  authService.ts  history.ts  importer.ts  main.ts  preload.ts  settings.ts  store.ts  webview-preload.ts
src/main/services/: AdBlockService.ts
src/renderer/: App.tsx  electron.d.ts  index.css
src/renderer/components/: AgentPanel.tsx  ColorPicker.tsx  CommandBar.tsx  CommandPalette.tsx  ContextMenu.tsx  Dock.tsx  DockModal.tsx  HomePage.tsx  IconPicker.tsx  InputModal.tsx  NavigationOverlay.tsx  OnboardingWizard.tsx  RealmModal.tsx  RealmSearch.tsx  RealmSwitcher.tsx  SettingsPage.tsx  Sidebar.tsx  SortableDock.tsx  (+3 more)
src/shared/: types.ts
src/test/: settings.test.ts  setup.ts
(+986 files in other folders)
