[package]
name = "native-core"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib"]

[dependencies]
napi = { version = "2.16.1", default-features = false, features = ["napi4", "serde-json"] }
napi-derive = "2.16.2"
serde_json = "1.0"

[build-dependencies]
napi-build = "2.1.3"

[profile.release]
lto = true
strip = "symbols"
opt-level = 3
codegen-units = 1
